--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_CONNECTION =
+DB_CONNECTION = mongodb+srv://3Ninjas:<password>@cluster0.xkw7m.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+PORT=5000
