--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "react-helmet": "^6.1.0",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
+        "react-share": "^4.4.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
