--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_CONNECTION = mongodb+srv://3Ninjas:YdWPCiYSkQiJVkvi@cluster0.xkw7m.mongodb.ne
 PORT = 4000
 
 ACCESS_TOKEN_SECRET = sreauvj35345nj34n396r9et3&$%sikdgjsdkj
+
+GMAIL_PASSWORD = Threeninjas2022
