--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "xss-clean": "^0.1.1"
   }
 }
