--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
