--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
     "cSpell.words": [
-        "Favourite",
         "adipiscing",
         "amet",
         "Auctor",
         "consectetur",
         "cursus",
+        "DIVITIONS",
         "duis",
         "elit",
         "Favourite",
