--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
+DB_CONNECTION = mongodb+srv://3Ninjas:YdWPCiYSkQiJVkvi@cluster0.xkw7m.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
+PORT = 4000
+
+ACCESS_TOKEN_SECRET = sreauvj35345nj34n396r9et3&$%sikdgjsdkj
+
+GMAIL_PASSWORD = Threeninjas2022
