--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multi-range-slider-react": "^1.0.7",
     "nodemailer": "^6.7.3",
+    "react-select": "^5.3.2",
     "xss-clean": "^0.1.1"
   }
 }
