search bar updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,10 @@
         "gravida",
         "lectus",
         "mauris",
+        "Navbarlogo",
         "navicon",
         "nulla",
+        "searchbox",
         "sollicitudin"
     ]
 }
