--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_CONNECTION = mongodb+srv://3Ninjas:YdWPCiYSkQiJVkvi@cluster0.xkw7m.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECTION = mongodb+srv://3Ninjas:YdWPCiYSkQiJVkvi@cluster0.xkw7m.mongodb.net/?retryWrites=true&w=majority
+
 
 PORT = 4000
 
