--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "cursus",
         "DIVITIONS",
         "duis",
+        "ecommerce",
         "elit",
         "Favourite",
         "gravida",
