payment page added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "adipiscing",
         "amet",
         "Auctor",
+        "bkash",
         "consectetur",
         "cursus",
         "DIVITIONS",
